--- a/DemoFollower/app/src/main/res/layout/activity_view_profile.xml
+++ b/DemoFollower/app/src/main/res/layout/activity_view_profile.xml
@@ -5,10 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductListActivity">
+    tools:context=".ViewProfileActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewProductList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
